WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36119
Method name and parameter name mistakes from recent SPI addition
https://bugs.webkit.org/show_bug.cgi?id=36119
Summary
Method name and parameter name mistakes from recent SPI addition
John Sullivan
Reported
2010-03-15 08:22:34 PDT
A method named "setAllowScrollersToOverlapContent:" was recently added as Mac-only SPI in WebFrame and WebDynamicScrollBarsView. This name should be "setAllows…" to match other usage. Also, parameters for -[WebDynamicScrollBarsView setAlwaysHideHorizontalScroller:] and -setAlwaysHideVerticalScroller: (which were added together with -setAllowScrollersToOverlapContent:) have reversed boolean-style names in the implementation, which is confusing.
Attachments
Patch to rename recently-added methods, instance variable, and parameters.
(7.17 KB, patch)
2010-03-15 08:35 PDT
,
John Sullivan
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2010-03-15 08:35:23 PDT
Created
attachment 50710
[details]
Patch to rename recently-added methods, instance variable, and parameters. These methods are used only on Safari at this point. I will also update Safari for these renamings.
John Sullivan
Comment 2
2010-03-15 08:41:51 PDT
Committed in 55997.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug