Method name and parameter name mistakes from recent SPI addition <https://bugs.webkit.org/show_bug.cgi?id=36119>

Reviewed by Dan Bernstein.

* WebView/WebDynamicScrollBarsView.h:
Renamed instance variable and method name from "setAllowXXX" to "setAllowsXXX".

* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView setAllowsScrollersToOverlapContent:]):
Updated for renamed instance variable and method.
(-[WebDynamicScrollBarsView setAlwaysHideHorizontalScroller:]):
Changed parameter name from shouldBeVisible to shouldBeHidden.
(-[WebDynamicScrollBarsView setAlwaysHideVerticalScroller:]):
Ditto.
(-[WebDynamicScrollBarsView contentViewFrame]):
Updated for renamed instance variable.
(-[WebDynamicScrollBarsView tile]):
Ditto.
(-[WebDynamicScrollBarsView reflectScrolledClipView:]):
Ditto.

* WebView/WebFrame.mm:
(-[WebFrame setAllowsScrollersToOverlapContent:]):
Renamed method from setAllowXXX, and updated for same change in WebDynamicScrollBarsView.

* WebView/WebFramePrivate.h:
Renamed method name from "setAllowXXX" to "setAllowsXXX".



Canonical link: https://commits.webkit.org/47292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55997 268f45cc-cd09-0410-ab3c-d52691b4dbfc