WebKit/mac/WebView/WebDynamicScrollBarsView.mm
@@ -54,33 +54,33 @@ const int WebCoreScrollbarAlwaysOn = ScrollbarAlwaysOn;
     [self updateScrollers];
 }
 
-- (void)setAllowScrollersToOverlapContent:(BOOL)flag
+- (void)setAllowsScrollersToOverlapContent:(BOOL)flag
 {
-    if (allowScrollersToOverlapContent == flag)
+    if (allowsScrollersToOverlapContent == flag)
         return;
         
-    allowScrollersToOverlapContent = flag;
+    allowsScrollersToOverlapContent = flag;
     
     [[self contentView] setFrame:[self contentViewFrame]];
     [[self documentView] setNeedsLayout:YES];
     [[self documentView] layout];
 }
 
-- (void)setAlwaysHideHorizontalScroller:(BOOL)shouldBeVisible
+- (void)setAlwaysHideHorizontalScroller:(BOOL)shouldBeHidden
 {
-    if (hideHorizontalScroller == shouldBeVisible)
+    if (hideHorizontalScroller == shouldBeHidden)
         return;
 
-    hideHorizontalScroller = shouldBeVisible;
+    hideHorizontalScroller = shouldBeHidden;
     [self updateScrollers];
 }
 
-- (void)setAlwaysHideVerticalScroller:(BOOL)shouldBeVisible
+- (void)setAlwaysHideVerticalScroller:(BOOL)shouldBeHidden
 {
-    if (hideVerticalScroller == shouldBeVisible)
+    if (hideVerticalScroller == shouldBeHidden)
         return;
         
-    hideVerticalScroller = shouldBeVisible;
+    hideVerticalScroller = shouldBeHidden;
     [self updateScrollers];
 }
 
@@ -93,9 +93,9 @@ const int WebCoreScrollbarAlwaysOn = ScrollbarAlwaysOn;
     NSRect frame = [[self contentView] frame];
     
     if ([self hasHorizontalScroller])
-        frame.size.height = (allowScrollersToOverlapContent ? NSMaxY([[self horizontalScroller] frame]) : NSMinY([[self horizontalScroller] frame]));
+        frame.size.height = (allowsScrollersToOverlapContent ? NSMaxY([[self horizontalScroller] frame]) : NSMinY([[self horizontalScroller] frame]));
     if ([self hasVerticalScroller])
-        frame.size.width = (allowScrollersToOverlapContent ? NSMaxX([[self verticalScroller] frame]) : NSMinX([[self verticalScroller] frame]));
+        frame.size.width = (allowsScrollersToOverlapContent ? NSMaxX([[self verticalScroller] frame]) : NSMinX([[self verticalScroller] frame]));
     return frame;
 }
 
@@ -105,7 +105,7 @@ const int WebCoreScrollbarAlwaysOn = ScrollbarAlwaysOn;
 
     // [super tile] sets the contentView size so that it does not overlap with the scrollers,
     // we want to re-set the contentView to overlap scrollers before displaying.
-    if (allowScrollersToOverlapContent)
+    if (allowsScrollersToOverlapContent)
         [[self contentView] setFrame:[self contentViewFrame]];
 }
 
@@ -250,7 +250,7 @@ static const unsigned cMaxUpdateScrollbarsPass = 2;
 {
     if (clipView == [self contentView]) {
         // Prevent appearance of trails because of overlapping views
-        if (allowScrollersToOverlapContent)
+        if (allowsScrollersToOverlapContent)
             [self setDrawsBackground:NO];
     
         // FIXME: This hack here prevents infinite recursion that takes place when we
